--- a/web/application/templates/exercise_group.html
+++ b/web/application/templates/exercise_group.html
@@ -37,7 +37,7 @@
 			<br>
 
 			<div style="text-align: center; padding: 10px; font-size: 18px;">
-				<a href="{{ url_for('exercise_list', level='Iniciante') }}"><img src="{{ url_for('static', filename='images/number_one.png') }}" alt="" height="70" width="70"></a>
+				<a href="{{ url_for('exerciselist', level='Iniciante') }}"><img src="{{ url_for('static', filename='images/number_one.png') }}" alt="" height="70" width="70"></a>
 				<p>Nível Iniciante:</p>
 				<p>Variáveis e Constantes, Tipos de Dados, Estruturas de Decisão e Repetição, etc.</p>
 			</div>
@@ -49,9 +49,9 @@
 			<br>
 
 			<div style="text-align: center; padding: 10px; font-size: 18px;">
-				<a href="{{ url_for('exercise_list', level='Intermediario') }}" ><img src="{{ url_for('static', filename='images/number_two.png') }}" alt="" height="70" width="70"></a>
+				<a href="{{ url_for('exerciselist', level='Intermediario') }}" ><img src="{{ url_for('static', filename='images/number_two.png') }}" alt="" height="70" width="70"></a>
 				<p>Nível intermediário:</p>
-				<p>Vetores, Matrizes, Ordenação, etc.</p>	
+				<p>Vetores, Matrizes, Ordenação, Funções, etc.</p>
 			</div>
 
 		</div>
@@ -61,9 +61,9 @@
 			<br>
 
 			<div style="text-align: center; padding: 10px; font-size: 18px;">
-				<a href="{{ url_for('exercise_list', level='Avancado') }}"><img src="{{ url_for('static', filename='images/number_three.png') }}" alt="" height="70" width="70"></a>
+				<a href="{{ url_for('exerciselist', level='Avancado') }}"><img src="{{ url_for('static', filename='images/number_three.png') }}" alt="" height="70" width="70"></a>
 				<p>Nível avançado:</p>
-				<p>Ponteiros, Matrizes, Ordenação, etc.</p>
+				<p>Algoritmos, Alocação de Memória, Ponteiros, Funções recursicas, etc.</p>
 			</div>
 
 		</div>
