--- a/web/application/templates/exercise_result.html
+++ b/web/application/templates/exercise_result.html
@@ -4,7 +4,7 @@
 
 {% block head %}
 
-{{ super() }}
+	{{ super() }}
 
 {% endblock %}
 
@@ -20,7 +20,7 @@
 
 			<p>{{ result }}</p>
 
-			<b><a href="{{ url_for('listexercises') }}" style="font-family: verdana; font-size: 20px; text-decoration: None; color: #186249; font-style: italic;">Voltar aos Exercícios</a></b>
+			<b><a href="{{ url_for('exercisegroup') }}" style="font-family: verdana; font-size: 20px; text-decoration: None; color: #186249; font-style: italic;">Voltar aos Exercícios</a></b>
 
 		</div>
 
