--- a/web/application/templates/judge_exercises.html
+++ b/web/application/templates/judge_exercises.html
@@ -55,15 +55,20 @@
 
             <div class="divJudge">
 
-                <textarea name="codearea" rows="15" cols="50" required></textarea><br><br>
+                <textarea name="codearea" rows="15" cols="50" required>
+#include <stdio.h>
+
+int main(){
+
+    return 0;
+
+}</textarea><br><br>
 
                 <input class="buttonJudge" type="submit" value="Submeter">
 
                 <br>
 
                 <p>Ou, você pode importar diretamente um arquivo para Julgamento</p>
-
-                
 
             </div>
 
