--- a/web/application/templates/main.html
+++ b/web/application/templates/main.html
@@ -106,6 +106,45 @@
 
 	</div>
 
+	<br><br>
+
+	<div id="flex-container">
+
+		<div class="flex-item">
+			
+			<br>
+
+			<div style="text-align: center; padding: 10px; font-size: 18px;">
+				<a href="{{ url_for('rules') }}"><img src="{{ url_for('static', filename='images/rules.png') }}" alt="" height="70" width="70"></a>
+				<p>Conheça as regras que o Seven Online Judge! contém.</p>
+			</div>
+
+		</div>
+
+		<div class="flex-item">
+			
+			<br>
+
+			<div style="text-align: center; padding: 10px; font-size: 18px;">
+				<a href="{{ url_for('presentation') }}"><img src="{{ url_for('static', filename='images/question_linux.png') }}" alt="" height="70" width="70"></a>
+				<p>Conheça as perguntas possíveis que o Seven Online Judge! contém.</p>
+			</div>
+
+		</div>
+
+		<div class="flex-item">
+			
+			<br>
+
+			<div style="text-align: center; padding: 10px; font-size: 18px;">
+				<a href="{{ url_for('presentation') }}"><img src="{{ url_for('static', filename='images/information.png') }}" alt="" height="70" width="70"></a>
+				<p>Conheça os significados e dicas de cada Status dos Exercícios.</p>
+			</div>
+
+		</div>
+
+	</div>
+
 	<br>
 
 	<hr>
