--- a/web/application/templates/preview_exercise.html
+++ b/web/application/templates/preview_exercise.html
@@ -78,7 +78,7 @@
 
         <div style="text-align: center;">
             
-            <b><a href="{{ url_for('judges', exercise=exercise.exercise_number) }}" style="font-family: verdana; font-size: 20px; text-decoration: underline; color: #186249; font-style: italic;">Julgar esse exercício</a></b>
+            <b><a target="_blank" href="{{ url_for('judges', exercise=exercise.exercise_number) }}" style="font-family: verdana; font-size: 20px; text-decoration: underline; color: #111111; font-style: italic;">Julgar esse exercício</a></b>
 
         </div>
 
