Adding new files to project

--- a/web/application/templates/base_index.html
+++ b/web/application/templates/base_index.html
@@ -44,9 +44,9 @@
             <a class="nav-link" href="{{ url_for('studies') }}">Estudos <span class="sr-only">(current)</span></a>
           </li>
 
-          <li class="nav-item active">
+          <!--<li class="nav-item active">
             <a class="nav-link" href="{{ url_for('statistics') }}">Estatísticas <span class="sr-only">(current)</span></a>
-          </li>
+          </li>-->
 
         </ul>
 
@@ -56,11 +56,11 @@
 
     {% block content %}{% endblock %}
 
-    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+    <script src="{{ url_for('static', filename='js/jquery-3.1.1.slim.min.js') }}" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
 
     <script>window.jQuery || document.write('<script src="{{ url_for('static', filename='js/jquery.min.js') }}"><\/script>')</script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+    <script src="{{ url_for('static', filename='js/tether.min.js') }}" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
 
     <script src="{{  url_for('static', filename='js/bootstrap.min.js') }} "></script>
 
