--- a/web/application/templates/exercise_board_main.html
+++ b/web/application/templates/exercise_board_main.html
@@ -48,7 +48,7 @@
 			<br>
 
 			<div style="text-align: center; padding: 10px; font-size: 18px;">
-				<a href="{{ url_for('presentation') }}"><img class="action" src="{{ url_for('static', filename='images/information.png') }}" alt="" height="70" width="70"></a>
+				<a href="{{ url_for('statusexplanation') }}"><img class="action" src="{{ url_for('static', filename='images/information.png') }}" alt="" height="70" width="70"></a>
 				<p>Conheça os significados e dicas de cada Status dos Exercícios.</p>
 			</div>
 
