--- a/web/application/templates/exercise_group.html
+++ b/web/application/templates/exercise_group.html
@@ -38,7 +38,7 @@
 
 			<div style="text-align: center; padding: 10px; font-size: 18px;">
 				<a href="{{ url_for('exerciselist', level='Iniciante') }}"><img src="{{ url_for('static', filename='images/number_one.png') }}" alt="" height="70" width="70"></a>
-				<p>Nível Iniciante:</p>
+				<p><b>Nível Iniciante:</b></p>
 				<p>Variáveis e Constantes, Tipos de Dados, Estruturas de Decisão e Repetição, etc.</p>
 			</div>
 
@@ -50,7 +50,7 @@
 
 			<div style="text-align: center; padding: 10px; font-size: 18px;">
 				<a href="{{ url_for('exerciselist', level='Intermediario') }}" ><img src="{{ url_for('static', filename='images/number_two.png') }}" alt="" height="70" width="70"></a>
-				<p>Nível intermediário:</p>
+				<p><b>Nível intermediário:</b></p>
 				<p>Vetores, Matrizes, Ordenação, Funções, etc.</p>
 			</div>
 
@@ -62,7 +62,7 @@
 
 			<div style="text-align: center; padding: 10px; font-size: 18px;">
 				<a href="{{ url_for('exerciselist', level='Avancado') }}"><img src="{{ url_for('static', filename='images/number_three.png') }}" alt="" height="70" width="70"></a>
-				<p>Nível avançado:</p>
+				<p><b>Nível avançado:</b></p>
 				<p>Algoritmos, Alocação de Memória, Ponteiros, Funções recursicas, etc.</p>
 			</div>
 
