--- a/web/application/static/css/styles.css
+++ b/web/application/static/css/styles.css
@@ -58,7 +58,7 @@ tr:nth-child(even) {
 
 	margin: auto;
 
-	width: 60%;
+	width: 50%;
 
     border: 1px solid black;
 
@@ -138,7 +138,7 @@ tr:nth-child(even) {
 
 	margin: auto;
 
-	width: 70%;
+	width: 90%;
 
     border: 0px solid black;
 
@@ -324,14 +324,6 @@ tr:nth-child(even) {
 
 }
 
-.labelTitle{
-
-	font-size: 30px;
-
-	color: black;
-
-}
-
 .buttonMain{
 
 	width: 70%;
@@ -378,7 +370,7 @@ tr:nth-child(even) {
 
 .buttonRegister{
 
-	width: 75%;
+	width: 50%;
 
 	padding: 10px;
 
@@ -400,7 +392,7 @@ tr:nth-child(even) {
 
 .buttonNext{
 
-	width: 20%;
+	width: 40%;
 
 	padding: 7px;
 
@@ -430,8 +422,24 @@ tr:nth-child(even) {
     margin: 0 auto;
 }
 
+#flex-container2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 40%;
+    margin: 0 auto;
+}
+
 .flex-item {
     width: 30%;
+    height: 260px;
+    background: #fff;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    background-color: #ffffff;
+}
+
+.flex-item2 {
+    width: 40%;
     height: 260px;
     background: #fff;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -447,9 +455,14 @@ img.main:hover {
 	border: 1px solid #ffffff; 
 	border-radius: 2px;
 	background-color: #3399ff;
-  	opacity:0.7 !important;
+  	opacity:0.5 !important;
   	filter:alpha(opacity=70) !important; /* For IE8 and earlier */
   	box-shadow: 0 0 0px #000000 !important;
+}
+
+img.interactive_study:hover {
+	border-style: groove;
+	border-radius: 3px;
 }
 
 .divTableExercises{
@@ -554,14 +567,14 @@ a.effect:hover{
 }
 
 .divStudyItensDescription{
-	background-color: #e6f2ff;
+	background-color: #b3d2ff;
 	border-radius: 2px;
 	padding: 7px;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .divStudyItensExample{
-	background-color: #b9d2f9;
+	background-color: #90EE90;
 	border-radius: 2px;
 	padding: 7px;
 	box-shadow: 0 4px 8px
@@ -605,3 +618,5 @@ hr.style{
     background: #333;
     background-image: linear-gradient(to right, #ccc, #333, #ccc);
 }
+
+.highlight {color: yellow;}
