--- a/web/application/templates/base_studies.html
+++ b/web/application/templates/base_studies.html
@@ -47,8 +47,20 @@
                 <img src="{{ url_for('static', filename='images/help.png') }}" alt="Smiley face" width="25" height="25">  Ajuda</a>
               <a class="dropdown-item effect" href="#">
                 <img src="{{ url_for('static', filename='images/study_go.png') }}" alt="Smiley face" width="25" height="25">   Vamos estudar!</a>
+              <!-- <a class="dropdown-item effect" href="#">
+                <img src="{{ url_for('static', filename='images/study_statistics.png') }}" alt="Smiley face" width="25" height="25">   Estatísticas</a> -->
+            </div>
+          </li>
+
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Exercícios</a>
+            <div class="dropdown-menu" aria-labelledby="dropdown02">
               <a class="dropdown-item effect" href="#">
-                <img src="{{ url_for('static', filename='images/study_statistics.png') }}" alt="Smiley face" width="25" height="25">   Estatísticas</a>
+                <img src="{{ url_for('static', filename='images/help.png') }}" alt="Smiley face" width="25" height="25">  Ajuda</a>
+              <a class="dropdown-item effect" href="#">
+                <img src="{{ url_for('static', filename='images/exercise_go.png') }}" alt="Smiley face" width="25" height="25">   Mão na massa!</a>
+              <!--<a class="dropdown-item effect" href="#">
+              <img src="{{ url_for('static', filename='images/exercises_statistics.png') }}" alt="Smiley face" width="25" height="25">   Estatísticas</a>-->
             </div>
           </li>
 
