--- a/web/application/templates/interactive_study.html
+++ b/web/application/templates/interactive_study.html
@@ -24,7 +24,7 @@
 			    
 		      	</div>
 
-		      	<strong><p style="font-size: 42px;">Bem vindo aos Estudos Interativos</p></strong>
+		      	<strong><p style="font-size: 42px;"><i>{{ current_user.name.title() }}</i>, Bem vindo aos Estudos Interativos!</p></strong>
 
 				<div style="padding-left: 100px;">
 			 
@@ -36,105 +36,11 @@
 
   		</div>
 
-		<div style="margin: auto; text-align: center;">
-
-			<br><br><br><br><br>
-
-			<div style="width: 80%; margin: auto;">
-
-				<p style="font-size: 36px;">Nós preparamos alguns itens que acreditamos ser de <b>extrema importância</b> para quem está começando a aprender <b>Programação</b></p>
-
-				<br><br><br><br><br>
-
-				<p style="font-size: 33px;">Confira abaixo os itens que serão apresentados:</p>
-
-				<hr class="style">
-
-				<br>
-
-			</div>
-
-			<br><br>
-
-			<div style="text-align: center; font-size: 30px;">
-
-				<img src="{{ url_for('static', filename='images/number_zero.png') }}" alt="" height="40" width="40">  Variáveis e Constantes
-
-				<br><br>
-
-				<img src="{{ url_for('static', filename='images/number_one.png') }}" alt="" height="40" width="40">  Condições
-
-				<br><br>
-
-				<img src="{{ url_for('static', filename='images/number_two.png') }}" alt="" height="40" width="40">  Controle de Fluxo
-
-				<br><br>
-
-				<img src="{{ url_for('static', filename='images/number_three.png') }}" alt="" height="40" width="40">  Repetições
-
-				<br><br>
-
-				<img src="{{ url_for('static', filename='images/number_four.png') }}" alt="" height="40" width="40">  Entrada/Saída
-
-				<br><br>
-
-				<img src="{{ url_for('static', filename='images/number_five.png') }}" alt="" height="40" width="40">  Métodos
-
-				<br><br>
-
-				<img src="{{ url_for('static', filename='images/number_six.png') }}" alt="" height="40" width="40">  Funções
-
-			</div>
-
-			<br><br>
-
-		</div>
-
-		<br>
-
-		<hr class="style">
-
-		<br><br>
-
-		<div style="font-size: 42px; text-align: center;">
-
-			<img src="{{ url_for('static', filename='images/question_linux.png') }}" alt="" height="120" width="120">Como funciona o estudo interativo?
-
-			<img src="{{ url_for('static', filename='images/question_linux.png') }}" alt="" height="120" width="120">
-
-			<br><br>
-
-			<div style="width: 85%; font-size: 30px; margin: auto;">
-
-				<ol>
-
-					<li>Será apresentado o tema em questão da forma mais <b>simples</b> e <b>rapida</b> possível.</li>
-					<li>Será exibido algumas dicas de resolução do tema.</li>
-					<li>Após entender o tema, será possível testar os conhecimentos adquiridos.</li>
-
-				</ol>
-
-			</div>
-
-		</div>
-
-		<br><br><br><br>
-
-		<hr class="style">
-
-		<br>
-
-		<div style="width: 90%; margin: auto; font-size: 30px; text-align: center;">
-
-			<p>Chega de enrolação. <b><i>Let's code, dude?!</i></b></p>
-
-		</div>
-
-		<br>
-
 		<div style="width: 90%; margin: auto; font-size: 24px;">
 
-			<li>Iniciando: <b><i>"Variáveis e Constantes"</i></b></li>
+			<br><br>
+
+			<li>Iniciando: <b><i>"{{ study_item.name }}"</i></b></li>
 
 			<br>
 
@@ -146,9 +52,7 @@
 
 			<div class="divStudyItensDescription">
 
-				<p>"Variáveis são objetos para que seja possível "guardar coisas" na memória do computador para que
-					ele possa trabalhar com. Se comparado ao nosso corpo, <b>Variável</b> é um <b>Lugar</b> que reservamos em nosso
-				cérebro para guardar informações."</p>
+				<p>{{ study_item.content }}</p>
 
 			</div>
 
@@ -164,17 +68,27 @@
 
 			<div class="divStudyItensExample">
 
-				<p>Vamos começar criando algumas variáveis para guardar os seguintes dados:</p>
+				<p>{{ study_item.explanation }}</p>
 
-				<ol>
+			</div>
 
-					<li>Nome</li>
-					<li>E-mail</li>
-					<li>Idade</li>
-					<li>Celular</li>
-					<li>CPF</li>
+			<br>
 
-				</ol>
+			<button class="btn btn-primary" type="button" data-toggle="collapse" data-target="	#collapse1" aria-expanded="false" aria-controls="collapse1">
+				Ver as <b>Dicas de Resolução</b>
+			</button>
+
+			<div class="collapse" id="collapse1">
+
+				<div class="card card-body">
+
+					<br>
+				
+					<p>{{ study_item.helper }}</p>
+
+					<br>
+
+				</div>
 
 			</div>
 
@@ -188,17 +102,67 @@
 
 		</div>
 
-		<div class="divStudyItensTryIt">
+		<form action="{{ url_for('interactivestudy') }}" method="POST">
 
-			<textarea style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); font-size: 20px;" rows="5" cols="50">Essa é a sua área! Teste aqui seus conhecimentos adquiridos.</textarea>
+			{% if result %}
 
-			<br><br><br>
+				<button onclick="highlight({{ item }}) class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
+				Veja os resultados
+				</button>
 
-			<input class="button_default btnInteractiveStudySubmit" type="submit" value="Enviar">
+				<div class="collapse" id="collapse2">
 
-		</div>
+					<div class="card card-body">
+
+						{% for item in result %}
+
+							<p>{{ item }}</p>
+
+						{% endfor %}
+
+					</div>
+
+				</div>
+
+			{% endif %}
+
+			<div class="divStudyItensTryIt">
+
+				<textarea name="user_code" style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); font-size: 20px;" rows="5" cols="50" required="">Essa é a sua área! Teste aqui seus conhecimentos adquiridos.</textarea>
+
+				<br><br><br>
+
+				<input class="button_default btnInteractiveStudySubmit" type="submit" value="Enviar">
+
+			</div>
+
+		</form>
 
 		<br><br>
+
+	<script>
+
+		function highlight(pairs)
+		{
+		    inputText = document.getElementById("user_code");
+
+		    splitter = pairs.split(";")
+
+		    index_begin = splitter[0]
+
+		    index_end = splitter[1]
+
+		    window.alert(index_begin)
+
+		    window.alert(index_end)
+
+		    var innerHTML = inputText.innerHTML;
+
+	        innerHTML = innerHTML.substring(index_begin, index_end) + "<span class='highlight'>" + innerHTML.substring(index_begin, index_end) + "</span>" + innerHTML.substring(index_begin + index_end);
+	        inputText.innerHTML = innerHTML;
+		}
+
+	</script>
 
 	</body>
 
